--- a/Prophecy.ipynb
+++ b/Prophecy.ipynb
@@ -246,18 +246,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "SmartContract.addBetter() missing 1 required positional argument: 'outcome'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[14], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mcontract1\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43maddBetter\u001b[49m\u001b[43m(\u001b[49m\u001b[43mJohn\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mpublicKey\u001b[49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m3\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m20\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m      2\u001b[0m contract1\u001b[38;5;241m.\u001b[39maddBetter(John\u001b[38;5;241m.\u001b[39mpublicKey,\u001b[38;5;241m3\u001b[39m,\u001b[38;5;241m20\u001b[39m,\u001b[38;5;241m1\u001b[39m)\n\u001b[0;32m      3\u001b[0m contract1\u001b[38;5;241m.\u001b[39maddBetter(John\u001b[38;5;241m.\u001b[39mpublicKey,\u001b[38;5;241m3\u001b[39m,\u001b[38;5;241m20\u001b[39m,\u001b[38;5;241m2\u001b[39m)\n",
-      "\u001b[1;31mTypeError\u001b[0m: SmartContract.addBetter() missing 1 required positional argument: 'outcome'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Lorum Lora\n",
+      "Select 1 for yes\n",
+      "Select 2 for no\n",
+      "Select 3 for maybe\n",
+      "5\n",
+      "Current betters---------\n",
+      "User b9844203 bet 40 on yes.\n",
+      "{'yes': 40}\n",
+      "[BET] Started new bet.\n",
+      "[BET] Added better b9844203.\n",
+      "[BET] b9844203 added more to his bet.\n",
+      "[ERROR] b9844203 cannot bet on a different outcome.\n"
      ]
     }
    ],
