fixed the closing period error

--- a/Prophecy.ipynb
+++ b/Prophecy.ipynb
@@ -45,6 +45,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We'll start by generating the wallets for supposedly the \"users\".\n",
+    "In our case, we'll also be giving each user an account (assuming they've registrated to the betting website).\n",
+    "\n",
+    "The account also contains the amount of pebbles a user has."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 176,
    "metadata": {},
@@ -98,16 +108,15 @@
     "    with open(fileName, 'r', encoding='utf-8') as f:\n",
     "        return f.read()\n",
     "    \n",
-    "betFilePath=\"./scripts/bet.py\"    \n"
+    "betFilePath=\"./scripts/bet.py\"    "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For testing we will work on the contract through the instantiate function for ease of use. However, for the showcase in class, we must use the ContractWritingOperation and set it all up in the blockchain.\n",
-    "\n",
-    "In this example below, we showcase multiple bets going on at once."
+    "We'll start by assuming that Alice, a user, has generated a bet.\n",
+    "John sees the bet and wants to join in."
    ]
   },
   {
@@ -348,6 +357,8 @@
     "node1.new_certificate(bet1_start)\n",
     "sleep(1)\n",
     "\n",
+    "\n",
+    "\n",
     "cert1 = SmartContractWritingOperation(John.publicKey, bet1.hash(), 'addBetter', [JohnAccount, 1, 1])\n",
     "John.sign(cert1)\n",
     "node1.new_certificate(cert1)\n",
@@ -380,6 +391,7 @@
     "\n",
     "print('John has ', JohnAccount.pebbleAmount, ' pebbles')\n",
     "\n",
+    "SmartContractObject.display()\n",
     "\n",
     "#contract1.startBet(Alice.publicKey,1,5,\"Lorum Lora\",[\"yes\",\"no\",\"maybe\"])\n",
     "#contract2.startBet(Emma.publicKey,1,5,\"Arnoe Uytlel\",[\"yes\",\"no\",\"maybe\"])\n",
@@ -511,27 +523,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A solution to the timestamp issue in SmartContract will be to use the SmartCOntractWritingOperation wrapper to pass a timestamp everytime it calls a function."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 115,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "John has  20  pebbles\n"
-     ]
-    }
-   ],
-   "source": [
-    "#contract1.addBetter(JohnAccount,3,20,1)\n",
-    "\n",
-    "\n",
-    "#contract1.logDump()"
+    "Of course, each time John bets, the amount of pebbles he has should be decreased by the amount he used on the bet."
    ]
   },
   {
@@ -552,12 +544,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Alice, the original bet maker, after witnessing "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#contract1.closeBet(Alice.publicKey,1, 1)\n",
+    "\n",
     "cert2 = SmartContractWritingOperation(Alice.publicKey, bet1.hash(), 'closeBet', 1)\n",
     "John.sign(cert1)"
    ]
